# cmake_install_static_issue

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
libA/: CMakeLists.txt
libA/cmake/: libAConfig.cmake.in
libA/src/: CMakeLists.txt  hello.cpp  hello.h
libB/: CMakeLists.txt
libB/cmake/: libBConfig.cmake.in
libB/src/: CMakeLists.txt  hi.cpp  hi.h
